# ChangeLog for net-misc/aggregate
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/aggregate/ChangeLog,v 1.15 2010/10/17 04:46:37 leio Exp $

  17 Oct 2010; Mart Raudsepp <leio@gentoo.org> aggregate-1.6.ebuild:
  Drop to ~mips

  10 Oct 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/aggregate-1.6-build-fixup.patch, aggregate-1.6.ebuild:
  Fix pre-stripping for bug #240930, also now builds with the user CFLAGS
  and LDFLAGS.

  22 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> aggregate-1.6.ebuild:
  Stable on Mips, bug 173860.

  11 Apr 2007; Jeroen Roovers <jer@gentoo.org> metadata.xml,
  aggregate-1.6.ebuild:
  Stable for HPPA (bug #173860) and fixed spelling errors in <longdescription>.

  10 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> aggregate-1.6.ebuild:
  Stable on sparc wrt #173860

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  21 May 2006; Chris White <chriswhite@gentoo.org> metadata.xml:
  Added japanese metadata.xml translation.  Thanks to Yoshino-san in bug #133571.

  01 May 2005; Michael Hanselmann <hansmi@gentoo.org> aggregate-1.6.ebuild:
  Stable on ppc.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  19 Jul 2004; Robin H. Johnson <robbat2@gentoo.org> aggregate-1.6.ebuild:
  ebuild cleanup.

  07 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> aggregate-1.6.ebuild:
  Stable on alpha.

  28 Oct 2003; Robin H. Johnson <robbat2@gentoo.org> aggregate-1.6.ebuild:
  move to x86, add other arches that it should work on

  13 Sep 2003; Robin H. Johnson <robbat2@gentoo.org> aggregate-1.6.ebuild:
  forgot perl rdepend

*aggregate-1.6 (13 Sep 2003)

  13 Sep 2003; Robin H. Johnson <robbat2@gentoo.org> aggregate-1.6.ebuild,
  metadata.xml:
  initial commit
