@@ -1,17 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX aggregate-1.6-build-fixup.patch 362 RMD160 4d619f9f6bcbbb58674f02e1eacbebf85c37be54 SHA1 3e37a6a4f6b6d4aecc6ec99ba555a9a848f7a313 SHA256 18c1858d07b1ae3117ae844e800bb63c5398df1cc971dec0b76450f6cc52d0d9
-DIST aggregate-1.6.tar.gz 20566 RMD160 f6ce594c0fb44642c839d1514d8c3e3fe014a865 SHA1 13420baf4f3f93dbed3c380ab6cca175609c5d7d SHA256 166503005cd8722c730e530cc90652ddfa198a25624914c65dffc3eb87ba5482
-EBUILD aggregate-1.6.ebuild 817 RMD160 89a51cc3d5765a37057820a668a6523cfb51547c SHA1 3ee3076d96a825ade4244e6f1acb261c99eef936 SHA256 53cb20638b598c3179e59861ac6286c54d5e5f932d5a9607fba54ca0a0ca61d6
-MISC ChangeLog 1876 RMD160 758e7e2b56286faed7398664f637b9f955961851 SHA1 cad9522ae0db9529d1eb633712867bac3e0906cb SHA256 9f3426103a7f7a8b62d80e7de9049f8ab48215c66f6144a78ea6a4a21608bcea
-MISC metadata.xml 961 RMD160 f0feffe7d02306847579924a4ff01a7c0795d7d1 SHA1 5eeac52b7d34d3f3f3fab560e2e917e83385c699 SHA256 b948d2efe314064f5e155fe126ec1f1f061ce93da2917368138e8fa9bc874069
+AUX aggregate-1.6-build-fixup.patch 362 SHA256 18c1858d07b1ae3117ae844e800bb63c5398df1cc971dec0b76450f6cc52d0d9 SHA512 15fbcd2681187543ff0475cf08ff33ff3cf0cb74653229424209d931adf70f3b67c30434b62ae5a395252e579b45dcd51c68a80fcf5dc7ec4c1420370d246340 WHIRLPOOL 5994fbd7908d052e5e7bf9228093cf96153a8f93bc094e32cbcf78da7df115115968c976361756235eefc9ca10668e42209be26842a0afaf88108e6e1d08d785
+DIST aggregate-1.6.tar.gz 20566 SHA256 166503005cd8722c730e530cc90652ddfa198a25624914c65dffc3eb87ba5482
+EBUILD aggregate-1.6.ebuild 809 SHA256 41e9c4db1ffa5097c575ee03527fadc50224ed6715cb96cb6bd67511e59077c9 SHA512 bcb384a9c914b3515484fba100a8c78e156142140cf9c71377c345bf75c9e93ef677e8f4da5661e8b1665d0dd947140b8e85d18e53eb6cdaa2ff856fc8fb001c WHIRLPOOL 03cf4ebdd7d3fd472906f02506608344ea6f6d7bfede91a9cc1aa2b95a1a63651dbe8544237a43730d85e70a8af4c925fb558d5ae61c63158657d6658cfb00c9
+MISC ChangeLog 2014 SHA256 f49b7d14e0b7263772fde46104281a69ea0862deafaaeb72460c6b02cad70acc SHA512 3509bba84264e711f920b64442a3ba94dd430cfd10d6bdd80773236c03bf5ed2e28e2e46b3afdc781dfdfc7ef11ee5de7712358010ddee4ce860171409ed12e7 WHIRLPOOL d9c21ba473df8e05c5de03b897f184a195f4c137dfb7e925df57071e450e66f19b008eeaadd02dfb1bf5266508e30a553439acfad80a0e978b3e5d4b29f68435
+MISC metadata.xml 961 SHA256 b948d2efe314064f5e155fe126ec1f1f061ce93da2917368138e8fa9bc874069 SHA512 b27ee50ea3b436357d2eb43d6881fcd0c4f43f3d768c3aa886b8190d6b73d1f31aed86f84606e3309f384af3c4258e550a0062f01e2f7a0621e162c042f1305e WHIRLPOOL 7c0d32e9a844f62b1e3657b330d42229f6da3b98225f1438d0fb43a0e2bf678a89840b2ca0515db4a1f742b6e019b9fe81423766364460fdd232321b57d2a732
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJwEAQEIAAYFAk59rRgACgkQfXuS5UK5QB1o/AQAihk0YyQ0ypqKGUbEkoqBwxB+
-WqRRyiW22Cn1Sx94IYxSw9nJx2MHjsOknKemHISGi2J3aHns+9D5aADXk8FJDgmT
-f3Y2ocrtznRVzyY2LuPRwiLYwKeEC73eYL+z51dxzHgNUxLf+4ZCExD85POd6Idk
-zHdMgU1579dc19ueBwA=
-=l8z4
+iQIcBAEBCAAGBQJQ1e1MAAoJEDxpGckxwJCBRHMP/AhvjmrChjJHJlrzwFN9OrEz
+LavDB7xeKYuGe01OTiCQZnpPPPGCPVyCKpLhXFpfyXal0JTGYu+2r/XHvQHzBsIl
+WIS+dcrrjg0rCP99gXohFAPsrr2p9/CUqO9okuoyzQKk6IqRCWR92elkc7mqm02v
+vKNdszI1cSRe8m7amQYps/a1R+0YfGhECluQS8egbm1t0COgqTFfuyMS+RDTozEe
+nnsvzC91mrLXzLZAW71D5Qz+9EwZCZxO+Q2unmzgMGR3O3YTeDDVjNFkrYXPTFBX
+1NzECVYui8bCVQ/cJHOd0OUl1TQywzYJD03PpsJkrBNJ3hNU/P/FXzN9Uex/vQS2
+voXifQdGSmTzvrk148MBKrKBbgVkMJQawRSb49E6P87HaKjB73hIqFYc6sl/6DcF
+iiLso+OM1y+T0OosJ68z0YD+FmbvsPWfd1uygXSsQK4KVhRT8k6M+IqWDM6c+lTc
+wLB7Tj9yc95BtwGP26buM3b7sdsHS5SH12HSFsZpeaWUAuVpwAebZ3UBVMV4uWEy
+ZhkcnWlBHBI586DHNOVWsgF32GkWHMyfmGEGHje2EcCvATZRnJsWJBz9IpXYROMH
+WYgj1eHn90GJqyXeDZujywHEiWBA63LKkPSjBSbOAvTbTtnGefwz3lPFWl+aDZ6u
++kXqU7LewCOCZbBGXQzK
+=HpZM
 -----END PGP SIGNATURE-----
