@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/aggregate/aggregate-1.6.ebuild,v 1.16 2010/10/28 09:25:23 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/aggregate/aggregate-1.6.ebuild,v 1.17 2012/12/22 17:24:28 ulm Exp $
 
 EAPI=2
 inherit eutils toolchain-funcs
@@ -9,7 +9,7 @@ DESCRIPTION="aggregate takes a list of prefixes in conventional format on stdin,
 HOMEPAGE="http://dist.automagic.org/"
 SRC_URI="${HOMEPAGE}/${P}.tar.gz"
 
-LICENSE="as-is"
+LICENSE="ISC"
 SLOT="0"
 KEYWORDS="alpha amd64 hppa ia64 ~mips ppc sparc x86"
 IUSE=""
