@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/aggregate
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/aggregate/ChangeLog,v 1.15 2010/10/17 04:46:37 leio Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/aggregate/ChangeLog,v 1.16 2012/12/22 17:24:28 ulm Exp $
+
+  22 Dec 2012; Ulrich Müller <ulm@gentoo.org> aggregate-1.6.ebuild:
+  Fix LICENSE, see LICENCE and LICENSE files in tarball, bug 446488.
 
   17 Oct 2010; Mart Raudsepp <leio@gentoo.org> aggregate-1.6.ebuild:
   Drop to ~mips
